fix ie text vertical align

--- a/resource/css/user.css
+++ b/resource/css/user.css
@@ -912,13 +912,11 @@ div.content2 {
 	display: inline-block;
 	width: 422px;
 }
+
 .ctitle {
 	float: right;
 	width: 422px;
 	height: 16px;
-}
-.ctitle span {
-	vertical-align: top;
 	cursor: pointer;
 	color: #333333 !important;
 	font-weight: bold;
@@ -931,13 +929,12 @@ div.content2 {
 	padding-left: 0;
 	padding-right: 0;
 	padding-top: 0;
-	line-height: 15px;
-	font-size: 15px;
+	line-height: 16px;
+	font-size: 16px;
 	text-align: left;
 	font-family: Helvetica Neue, Arial, Helvetica, 'Liberation Sans', FreeSans, sans-serif;
 	font-style: normal;
 	font-variant: normal;
-	height: 19px;
 }
 .ctitle span a {
 
@@ -964,9 +961,9 @@ div.content2 {
 	float: right;
 	width: 422px;
 	height: 38px;
-	line-height: 19px;
+	line-height: 15px;
+	font-size: 15px;
 	font-family: Arial, "Helvetica Neue", sans-serif;
-	line-height: 19px;
 	padding-bottom: 0;
 	padding-left: 0;
 	padding-right: 0;
@@ -976,7 +973,6 @@ div.content2 {
 	margin-left: 0;
 	margin-right: 0;
 	margin-top: 0;
-	font-size: 15px;
 	cursor: pointer;
 	color: #444444;
 	text-align: left;
@@ -1008,7 +1004,7 @@ div.content2 {
 }
 .ctime {
 	float: right;
-	height: 17px;
+	height: 11px;
 	width: 422px;
 	margin-bottom: 0;
 	margin-left: 0;
@@ -1021,7 +1017,7 @@ div.content2 {
 	color: #999999;
 	font-size: 11px;
 	text-decoration: none;
-	line-height: 15px;
+	line-height: 11px;
 	text-align: left;
 	font-family: Helvetica Neue, Arial, Helvetica, 'Liberation Sans', FreeSans, sans-serif;
 	font-style: normal;
